[package]
name = "home_garden_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme280 = "0.4.4"
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["pq-sys", "postgres"] }
dotenv = "0.15.0"
linux-embedded-hal = "0.4.0-alpha.2"
rppal = "0.13.1"
